--- a/BethanysPieShop.WebFrontEnd/_Imports.razor
+++ b/BethanysPieShop.WebFrontEnd/_Imports.razor
@@ -8,4 +8,4 @@
 @using Microsoft.JSInterop
 @using BethanysPieShop.WebFrontEnd
 @using BethanysPieShop.WebFrontEnd.Shared
-
+@using BethanysPieShop.WebFrontEnd.Components
