--- a/BethanysPieShop.WebFrontEnd/Pages/EmployeeOverview.razor
+++ b/BethanysPieShop.WebFrontEnd/Pages/EmployeeOverview.razor
@@ -8,28 +8,13 @@
 }
 else
 {
-    <table class="table table-light">
-        <thead class="table-primary">
-            <tr>
-                <th></th>
-                <th>Employee ID</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var emp in Employees)
-            {
-                <tr>
-                    <td>
-                        <img src="@($"https://gillcleerenpluralsight.blob.core.windows.net/person/{emp.EmployeeId}-small.jpg")"
-                             class="rounded-circle" />
-                    </td>
-                    <td>@emp.EmployeeId</td>
-                    <td>@emp.FirstName</td>
-                    <td>@emp.LastName</td>
-                </tr>
-            }
-        </tbody>
-    </table>
+    <QuickViewPopup Employee="_selectedEmployee"></QuickViewPopup>
+    <div class="row">
+    @foreach (var employee in Employees)
+        {
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
+                <EmployeeCard Employee="employee" EmployeeQuickViewClicked="ShowQuickViewPopup" />
+            </div>
+        }
+    </div>
 }
