--- a/BethanysPieShop.WebFrontEnd/Shared/NavMenu.razor
+++ b/BethanysPieShop.WebFrontEnd/Shared/NavMenu.razor
@@ -1,6 +1,8 @@
 ﻿<div class="sidebar bg-light">
     <div class="pt-2 h-100">
-
+        <ProfilePicture>
+            <img src="images/profilePicture.jpg" class="img-fluid rounded-circle">
+        </ProfilePicture>
 
         <div class="menu list-group list-group-flush pt-5">
             <NavLink class="list-group-item list-group-item-action bg-light" href="/" Match="NavLinkMatch.All">
